<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Activity Recognition Sensing Sample</string>
    <string name="app_header">Context Sensing SDK Samples</string>
    <string name="authorizeButton">1) Authorize</string>
    <string name="startSensingButton">3) Enable Sensing</string>
    <string name="stopSensingButton">4) Disable Sensing</string>
    <string name="startDaemonButton">2) Start Daemon</string>
    <string name="stopDaemonButton">5) Stop Daemon</string>

</resources>