<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/headerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="20dp"
        android:text="@string/app_header"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/sampleNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="20dp"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <LinearLayout
        android:id="@+id/controlsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/authorizeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/authorizeButton"
            android:width="150dp" />

        <Button
            android:id="@+id/startSensingDaemonButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/startDaemonButton"
            android:width="150dp" />

        <Button
            android:id="@+id/startSensingButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/startSensingButton"
            android:width="150dp" />

        <Button
            android:id="@+id/stopSensingButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stopSensingButton"
            android:width="150dp" />

        <Button
            android:id="@+id/stopSensingDaemonButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stopDaemonButton"
            android:width="150dp" />

    </LinearLayout>

</LinearLayout>